--- a/tv/package.json
+++ b/tv/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-video": "^5.2.1",
+    "webtorrent": "^2.1.25"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,7 +23,9 @@
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-video": "^5.0.15",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/webtorrent": "^0.109.3",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
