--- a/tv/package.json
+++ b/tv/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-device-info": "^10.8.0",
+    "react-native-linear-gradient": "^2.8.2",
+    "react-native-paper": "^5.10.1",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-sse": "^1.1.0",
     "react-native-video": "^5.2.1",
     "webtorrent": "^2.1.25"
   },
