--- a/tv/package.json
+++ b/tv/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "react-native run-android --mode=release",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-device-info": "^10.8.0",
+    "react-native-fs": "^2.20.0",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-paper": "^5.10.1",
     "react-native-safe-area-context": "^4.7.1",
