fix(tv): sse bug

--- a/tv/package.json
+++ b/tv/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-device-info": "^10.8.0",
+    "react-native-event-source": "^1.1.0",
     "react-native-fs": "^2.20.0",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-paper": "^5.10.1",
@@ -29,6 +30,7 @@
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-event-source": "^1.1.0",
     "@types/react-native-video": "^5.0.15",
     "@types/react-test-renderer": "^18.0.0",
     "@types/webtorrent": "^0.109.3",
